snapshots/truth__fmt__tests__time_formatting__after_neg.snap
---
source: src/fmt.rs
expression: "f(9999, r#\"void main() { -1: a(); 0: c(); -1: e(); 6: g(); }\"#).trim()"
---
void main() {
-1:
    a();
0:
    c();
-1:
    e();
0:
+6: // 6
    g();
}
