snapshots/truth__fmt__tests__time_formatting__compression.snap
---
source: src/fmt.rs
expression: "f(9999, r#\"void main() { a(); b(); 6: c(); d(); -1: e(); f(); }\"#).trim()"
---
void main() {
    a();
    b();
+6: // 6
    c();
    d();
-1:
    e();
    f();
}
