snapshots/truth__fmt__tests__time_formatting__general_1.snap
---
source: src/fmt.rs
expression: "f(9999, r#\"void main() { 0: a(); 2: a(); 5: a(); }\"#).trim()"
---
void main() {
    a();
+2: // 2
    a();
+3: // 5
    a();
}
